made some changes to the styling

--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   "homepage": "https://github.com/DvdWel/boardash#readme",
   "devDependencies": {
     "grunt": "^1.0.3",
-    "package-lock.json": "^1.0.0",
+    "grunt-browser-sync": "^2.2.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.1",
-    "node-sass": "^4.9.3"
+    "node-sass": "^4.9.3",
+    "package-lock.json": "^1.0.0"
   },
   "dependencies": {
-    "grunt-browser-sync": "^2.2.0",
     "sass": "^1.13.1"
   }
-
 }
